// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parity corpus (locked to Ruby-matching output) > badge 1`] = `"<wa-badge variant="brand" appearance="filled" pill><strong>New</strong>&nbsp;stuff</wa-badge>"`;

exports[`parity corpus (locked to Ruby-matching output) > button-link 1`] = `"<wa-button variant="brand" size="large" href="https://x.com/a.zip" target="_blank" rel="noopener noreferrer" download><wa-icon slot="start" name="download"></wa-icon><strong>Get</strong>&nbsp;it</wa-button>"`;

exports[`parity corpus (locked to Ruby-matching output) > callout 1`] = `
"<wa-callout variant="brand"><wa-icon slot="icon" name="circle-info" variant="solid"></wa-icon><p>Hello <strong>world</strong> and <code>code</code></p>
</wa-callout>"
`;

exports[`parity corpus (locked to Ruby-matching output) > callout-attrs 1`] = `
"<wa-callout variant="warning" appearance="filled-outlined" size="large"><wa-icon slot="icon" name="shield" family="sharp" variant="regular" animation="bounce"></wa-icon><p>Heads up</p>
</wa-callout>"
`;

exports[`parity corpus (locked to Ruby-matching output) > comparison 1`] = `"<wa-comparison position="50"><img slot="before" src="b.jpg" alt="Before" /><img slot="after" src="a.jpg" alt="After" /></wa-comparison>"`;

exports[`parity corpus (locked to Ruby-matching output) > date-block 1`] = `"<wa-format-date date="2026-06-26" weekday="long" year="numeric" month="long" day="numeric" lang="fr"></wa-format-date>"`;

exports[`parity corpus (locked to Ruby-matching output) > date-inline-datetime 1`] = `"Released <wa-format-date date="2026-06-26T14:30:00Z" year="numeric" month="short" day="numeric" hour="numeric" minute="numeric" hour-format="24"></wa-format-date>."`;

exports[`parity corpus (locked to Ruby-matching output) > date-inline-granular 1`] = `"<wa-format-date date="2026-06-26" weekday="long" year="numeric" month="short" day="numeric" lang="fr"></wa-format-date>"`;

exports[`parity corpus (locked to Ruby-matching output) > date-inline-style 1`] = `"Published <wa-format-date date="2026-06-26" year="numeric" month="long" day="numeric"></wa-format-date>."`;

exports[`parity corpus (locked to Ruby-matching output) > date-relative 1`] = `"Updated <wa-relative-time date="2026-06-20" format="short" numeric="always"></wa-relative-time>."`;

exports[`parity corpus (locked to Ruby-matching output) > date-relative-sync 1`] = `"Live <wa-relative-time date="2026-06-20" sync></wa-relative-time>"`;

exports[`parity corpus (locked to Ruby-matching output) > layout-flank 1`] = `
"<div class="wa-flank:start wa-gap-m" style="--flank-size: 200px; --content-percentage: 60%">
Side
</div>"
`;

exports[`parity corpus (locked to Ruby-matching output) > tag-inline 1`] = `"Status: <wa-tag variant="success"><wa-icon name="check"></wa-icon>Done</wa-tag> ok"`;

exports[`parity corpus (locked to Ruby-matching output) > tooltip 1`] = `"<span id="tooltip-6ea8fe9c" tabindex="0" class="ma-tooltip-anchor" style="text-decoration: underline dotted; cursor: help;">API term</span><wa-tooltip for="tooltip-6ea8fe9c" placement="top" distance="5">Application Programming Interface</wa-tooltip>"`;
